syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";

package com.evernym.verity.actor;

message BucketDetail {
    int32 id = 1;
    int32 usedCount = 2;
    uint64 startDateTime = 3;
    uint64 endDateTime = 4;
}

message ResourceBucket {
    string name = 1;
    int32 type = 2;
    repeated BucketDetail buckets = 3;
}

message ResourceUsageState {
    option (scalapb.message).extends = "com.evernym.verity.actor.State";
    repeated ResourceBucket resourceBuckets = 1;
}

message ItemManagerState {
    option (scalapb.message).extends = "com.evernym.verity.actor.State";
    int32 totalEverAllocatedContainers = 1;
    string headContainerEntityId = 2;
    string tailContainerEntityId = 3;
    bool migrateItemsToNextLinkedContainer = 4;
}